--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
-    "mongoose": "^7.0.5"
+    "mongoose": "^7.0.5",
+    "npm": "^9.6.5",
+    "serve-favicon": "^2.5.0"
   }
 }
