--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/Knaoits/Apitest#readme",
   "dependencies": {
+    "@now/node": "^1.8.5",
+    "@vercel/node": "^2.12.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
