--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
+    "mongodb": "^5.3.0",
     "mongoose": "^7.0.5",
     "npm": "^9.6.5",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "vercel": "^28.20.0"
   }
 }
