--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "homepage": "https://github.com/Knaoits/Apitest#readme",
   "dependencies": {
-    "@vercel/node": "^2.12.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -28,8 +27,6 @@
     "moment": "^2.29.4",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.5",
-    "npm": "^9.6.5",
-    "serve-favicon": "^2.5.0",
-    "vercel": "^28.20.0"
+    "npm": "^9.6.5"
   }
 }
