--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "todoapp",
+  "name": "onlinesellerbackend",
+  "engines": {
+    "node": "16.14.2"
+},
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "watch-node" : "nodemon app.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node app.js",
+        "watch-node": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +21,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
-    "mongoose": "^5.13.17",
-    "nodemon": "^2.0.22"
-  }
+    "mongoose": "^5.13.17"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+}
 }
